--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOEMb4g1+XVMYkG+5qwc47Z",
+      "authorship_tag": "ABX9TyNLDbFFqSPYmXvwQYiyeodY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2429,10 +2429,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Text Classification with Representation Models**\n",
-        "\n",
-        "\n",
-        "Task: Movie review sentiment analysis using \"twitter-roberta-base-sentiment-latest\" on \"rotten tomatoes\" dataset."
+        "Movie review sentiment analysis using **\"twitter-roberta-base-sentiment-latest\"** on **\"rotten tomatoes\"** dataset."
       ],
       "metadata": {
         "id": "ocpx-LbZcjR7"
@@ -2690,7 +2687,8 @@
           ]
         },
         "id": "QlvJyQoViQb2",
-        "outputId": "f1cb5e02-51c9-46b9-af89-a056d00312d2"
+        "outputId": "f1cb5e02-51c9-46b9-af89-a056d00312d2",
+        "collapsed": true
       },
       "execution_count": null,
       "outputs": [
@@ -2943,6 +2941,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Classification using Embeddings"
+      ],
+      "metadata": {
+        "id": "UI-8ivdVKtYL"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "from sentence_transformers import SentenceTransformer"
@@ -2959,9 +2966,19 @@
         "model=SentenceTransformer(\"sentence-transformer/all-mpnet-base-v2\")\n",
         "\n",
         "train_embeddings=model.encode(data[\"train\"][\"text\"], show_progress_bar=True)\n",
-        "test_embeddings=model.encode(data[\"test\"][\"text\"], show_progress_bar=True)\n",
-        "\n",
+        "test_embeddings=model.encode(data[\"test\"][\"text\"], show_progress_bar=True)"
+      ],
+      "metadata": {
+        "id": "O3kpMANOjNpk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
         "clf=LogisticRegression(random_state=42)\n",
         "clf.fit(train_embeddings, data[\"train\"][\"label\"])\n",
         "\n",
@@ -2969,7 +2986,61 @@
         "evaluate_performance(data[\"test\"][\"label\"], y_pred)"
       ],
       "metadata": {
-        "id": "O3kpMANOjNpk"
+        "id": "hAE1DGzhKkT9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xL57A045KkRn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "kpIXN78YKkPT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7og5jjE5KkM6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_tMqvStdKkKk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0FG5ec9mKkH-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "u_MD_MF1Kj5Y"
       },
       "execution_count": null,
       "outputs": []
