--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNLDbFFqSPYmXvwQYiyeodY",
+      "authorship_tag": "ABX9TyN+9OWaPcnEwKMh8bRdLBU/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2943,7 +2943,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Classification using Embeddings"
+        "Classification using **Embeddings**"
       ],
       "metadata": {
         "id": "UI-8ivdVKtYL"
@@ -3001,8 +3001,19 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Zero shot learning**"
+      ],
+      "metadata": {
+        "id": "Ci4pinTqZJ3E"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "label_embeddings=model.encode([\"A negative review\", \"A positive review\"])"
+      ],
       "metadata": {
         "id": "kpIXN78YKkPT"
       },
@@ -3023,6 +3034,60 @@
       "source": [],
       "metadata": {
         "id": "_tMqvStdKkKk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "n4n52MqHYV4z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YaIgkAiwYV2u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3XIgGlXkYV0J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "0biDAl0rYVx0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "XdnzKLXnYVvb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "T6JhhL4jYVs0"
       },
       "execution_count": null,
       "outputs": []
