--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyN+9OWaPcnEwKMh8bRdLBU/",
+      "authorship_tag": "ABX9TyO68UMkdIAimsj/AAQdqSdi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2943,7 +2943,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Classification using **Embeddings**"
+        "**Leveraging Embeddings**"
       ],
       "metadata": {
         "id": "UI-8ivdVKtYL"
@@ -3003,7 +3003,11 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Zero shot learning**"
+        "**Zero shot learning**: To assign labels to documents, we apply cosine similarity to the document label pairs.\n",
+        "\n",
+        "Cosine similarity checks how similar a given document is to the description of the candidate label.\n",
+        "\n",
+        "Try with a very negative/positive movie review."
       ],
       "metadata": {
         "id": "Ci4pinTqZJ3E"
@@ -3012,13 +3016,24 @@
     {
       "cell_type": "code",
       "source": [
-        "label_embeddings=model.encode([\"A negative review\", \"A positive review\"])"
+        "label_embeddings=model.encode([\"A negative review\", \"A positive review\"])\n",
+        "cosine similarity (review, \"A negative review\")\n",
+        "cosine similarity (review, \"A positive review\")"
       ],
       "metadata": {
         "id": "kpIXN78YKkPT"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**With Generative Models**"
+      ],
+      "metadata": {
+        "id": "ugBR7svtbXor"
+      }
     },
     {
       "cell_type": "code",
