--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyO7D3uueUeMgParqMO3GwdV",
+      "authorship_tag": "ABX9TyPtsabqE09F0yJl9H/9jGBn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -102,7 +102,10 @@
     {
       "cell_type": "code",
       "source": [
-        "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline"
+        "from transformers import AutoModelForCausalLM, AutoTokenizer, pipeline\n",
+        "import numpy as np\n",
+        "from tqdm import tqdm\n",
+        "from transformers.pipelines.pt_utils import KeyDataset"
       ],
       "metadata": {
         "id": "Uqd_kCAFdf5R"
@@ -159,19 +162,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "from tqdm import tqdm\n",
-        "from transformers.pipelines.pt_utils import KeyDataset"
-      ],
-      "metadata": {
-        "id": "HxkU-06qgQyb"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -331,7 +321,15 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from transformers import pipeline\n",
+        "\n",
+        "pipe=pipeline(\n",
+        "    \"text2text-generation\",\n",
+        "    model=\"google/flan-t5-small\",\n",
+        "    device=\"cuda:0\"\n",
+        ")"
+      ],
       "metadata": {
         "id": "7og5jjE5KkM6"
       },
@@ -340,7 +338,11 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "prompt=\"Is the following sentence positive or negative?\"\n",
+        "data=data.map(lambda example:{\"t5\": prompt+example['text']})\n",
+        "data"
+      ],
       "metadata": {
         "id": "9OKl2_eWJkaV"
       },
