--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -7920,7 +7920,7 @@
         "outputId": "28e42632-dd03-4c83-d17f-352a6fbb0793",
         "collapsed": true
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8109,7 +8109,7 @@
       "metadata": {
         "id": "Uqd_kCAFdf5R"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8205,9 +8205,10 @@
             "b1b8b56f85ce4f20ba7ddeee01d4b8d2"
           ]
         },
-        "outputId": "e70c7907-2c16-476f-d4cc-88940a589c91"
+        "outputId": "e70c7907-2c16-476f-d4cc-88940a589c91",
+        "collapsed": true
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8430,7 +8431,7 @@
         "collapsed": true,
         "outputId": "37677322-0d91-4842-b79e-8cc1cd1c16c7"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8555,7 +8556,7 @@
         "outputId": "58cdd424-78b7-4c44-d211-647ae9f53d24",
         "collapsed": true
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8680,7 +8681,7 @@
       "metadata": {
         "id": "BNjZk-13gQ8C"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -8695,7 +8696,7 @@
         "id": "oakYCLffgQ-r",
         "outputId": "58c6cce7-c0c3-42b1-bb70-9f44eb3d97fa"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8889,7 +8890,7 @@
         },
         "outputId": "b7759129-2d3d-48f7-844b-ae373e9f31f1"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9048,7 +9049,7 @@
         "id": "9OKl2_eWJkaV",
         "outputId": "1f7b2b39-d2fa-4eca-e90e-fb78736d7084"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -9132,7 +9133,7 @@
         "id": "V4ZFR1HwJkXu",
         "outputId": "a065d3c2-dfbf-4997-e313-2c88582902a5"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -9155,7 +9156,7 @@
         "id": "U2_6A365JkVL",
         "outputId": "4605aa26-d4cd-49aa-9cde-cbd00f26fafd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
