--- a/text_clustering.ipynb
+++ b/text_clustering.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNshyzlxarcQc3hrVOjBYXy",
+      "authorship_tag": "ABX9TyORuN0lD1vIiD16eFeGn/UA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,7 @@
       },
       "outputs": [],
       "source": [
-        "!pip install transformer"
+        "!pip install transformer datasets accelerate"
       ]
     },
     {
