--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4",
-      "authorship_tag": "ABX9TyPU4Vie3zRxBKj5h0XKB9jt",
+      "authorship_tag": "ABX9TyMCLJM1vZrYxF2conyMkhwL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -14,8 +13,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -31,7 +29,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Movie review sentiment analysis using **\"twitter-roberta-base-sentiment-latest\"** on **\"rotten tomatoes\"** dataset."
+        "Aim: Leveraging pretrained language models for classifying text.\n",
+        "\n",
+        "1. Twitter-RoBERTa-base for Sentiment analysis"
+      ],
+      "metadata": {
+        "id": "PqOIKHzXF21g"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Movie review sentiment analysis using **\"twitter-roberta-base-sentiment-latest\"** on **\"rotten tomatoes\"** dataset.\n",
+        "\n",
+        "This model is finetuned on tweets for sentiment analysis. Although this was not trained specifically for movie reviews, we explore how this model generalizes."
       ],
       "metadata": {
         "id": "ocpx-LbZcjR7"
