--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMCLJM1vZrYxF2conyMkhwL",
+      "authorship_tag": "ABX9TyNPMkTDBhO+96wPLYmcPrmj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,8 @@
       "source": [
         "Aim: Leveraging pretrained language models for classifying text.\n",
         "\n",
-        "1. Twitter-RoBERTa-base for Sentiment analysis"
+        "1. Twitter-RoBERTa-base for Sentiment analysis\n",
+        "2."
       ],
       "metadata": {
         "id": "PqOIKHzXF21g"
@@ -42,7 +43,9 @@
       "source": [
         "Movie review sentiment analysis using **\"twitter-roberta-base-sentiment-latest\"** on **\"rotten tomatoes\"** dataset.\n",
         "\n",
-        "This model is finetuned on tweets for sentiment analysis. Although this was not trained specifically for movie reviews, we explore how this model generalizes."
+        "This model is finetuned on tweets for sentiment analysis. Although this was not trained specifically for movie reviews, we explore how this model generalizes.\n",
+        "\n",
+        "Embedding used: sentence-transformers/all-mpnet-base-v2"
       ],
       "metadata": {
         "id": "ocpx-LbZcjR7"
