--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNPMkTDBhO+96wPLYmcPrmj",
+      "authorship_tag": "ABX9TyNtv4kH9m0PUatkddIY9Clg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +31,10 @@
       "source": [
         "Aim: Leveraging pretrained language models for classifying text.\n",
         "\n",
-        "1. Twitter-RoBERTa-base for Sentiment analysis\n",
-        "2."
+        "1. Using pretrained task specific model\n",
+        "2. Situation when no model is pretrained for a specific task: leveraging embedding model to generate feature which are them fed to a classifier\n",
+        "3. Situation when there is no labeled data\n",
+        "4."
       ],
       "metadata": {
         "id": "PqOIKHzXF21g"
@@ -203,11 +205,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Zero shot learning**: To assign labels to documents, we apply cosine similarity to the document label pairs.\n",
+        "Classification in case of data without labels:\n",
         "\n",
-        "Cosine similarity checks how similar a given document is to the description of the candidate label.\n",
-        "\n",
-        "Try with a very negative/positive movie review."
+        "We shall use **Zero-shot classification** to predict labels of input text even though it was not trained on them. We describe our labels based on what they should represent."
       ],
       "metadata": {
         "id": "Ci4pinTqZJ3E"
