--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNtv4kH9m0PUatkddIY9Clg",
+      "authorship_tag": "ABX9TyPHRqm2jmomQlYJSYKTnzG8",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,7 +32,7 @@
         "Aim: Leveraging pretrained language models for classifying text.\n",
         "\n",
         "1. Using pretrained task specific model\n",
-        "2. Situation when no model is pretrained for a specific task: leveraging embedding model to generate feature which are them fed to a classifier\n",
+        "2. Situation when no model is pretrained for a specific task: leveraging embedding model to generate feature which are them fed to a classic machine learning classifier\n",
         "3. Situation when there is no labeled data\n",
         "4."
       ],
@@ -205,9 +205,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Classification in case of data without labels:\n",
+        "**Classification in case of data without labels:**\n",
         "\n",
-        "We shall use **Zero-shot classification** to predict labels of input text even though it was not trained on them. We describe our labels based on what they should represent."
+        "We shall use **Zero-shot classification with embeddings** to predict labels of input text even though it was not trained on them. We describe our labels based on what they should represent."
       ],
       "metadata": {
         "id": "Ci4pinTqZJ3E"
@@ -216,7 +216,7 @@
     {
       "cell_type": "code",
       "source": [
-        "label_embeddings=model.encode([\"A negative review\", \"A positive review\"])\n",
+        "label_embeddings = model.encode([\"A negative review\", \"A positive review\"])\n",
         "cosine similarity (review, \"A negative review\")\n",
         "cosine similarity (review, \"A positive review\")"
       ],
