--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHRqm2jmomQlYJSYKTnzG8",
+      "authorship_tag": "ABX9TyPwCHkuhZj67jiN9Zg3paY4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,10 +31,10 @@
       "source": [
         "Aim: Leveraging pretrained language models for classifying text.\n",
         "\n",
-        "1. Using pretrained task specific model\n",
+        "1. Using representive pretrained task specific model\n",
         "2. Situation when no model is pretrained for a specific task: leveraging embedding model to generate feature which are them fed to a classic machine learning classifier\n",
         "3. Situation when there is no labeled data\n",
-        "4."
+        "4. Using generative model"
       ],
       "metadata": {
         "id": "PqOIKHzXF21g"
@@ -217,8 +217,13 @@
       "cell_type": "code",
       "source": [
         "label_embeddings = model.encode([\"A negative review\", \"A positive review\"])\n",
-        "cosine similarity (review, \"A negative review\")\n",
-        "cosine similarity (review, \"A positive review\")"
+        "\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "\n",
+        "sim_matrix = cosine_similarity(test_embeddings, label_embeddings)\n",
+        "y_pred = np.argmax(sim_matrix, axis=1)\n",
+        "\n",
+        "evaluate_performance(data[\"test\"][\"label\"], y_pred)"
       ],
       "metadata": {
         "id": "kpIXN78YKkPT"
@@ -229,7 +234,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Classification With Generative Models**"
+        "**Classification With Generative Models**\n",
+        "\n",
+        "1. Using text-to-text transfer transformer"
       ],
       "metadata": {
         "id": "ugBR7svtbXor"
