--- a/text_classification.ipynb
+++ b/text_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPwCHkuhZj67jiN9Zg3paY4",
+      "authorship_tag": "ABX9TyMysYwYsF3kAP/wj90jkHWS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -236,7 +236,7 @@
       "source": [
         "**Classification With Generative Models**\n",
         "\n",
-        "1. Using text-to-text transfer transformer"
+        "1. Using text-to-text transfer transformer: Using Flan-T5 model for classification"
       ],
       "metadata": {
         "id": "ugBR7svtbXor"
