--- a/text_clustering.ipynb
+++ b/text_clustering.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFcWz3Zo3hS5Smq93sy5vB",
+      "authorship_tag": "ABX9TyN05RBzH76GIQfnSedmrpKa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -167,7 +167,7 @@
         "# create an embedding model for each abstract\n",
         "embedding_model = SentenceTransformer(\"thenlper/gte-small\")\n",
         "embeddings = embedding_model.encode(abstracts, show_progress_bar=True)\n",
-        "print(f\"Dimensions of resulting embeddings: {embeddings.shape}\")\n"
+        "print(f\"Dimensions of resulting embeddings: {embeddings.shape}\")"
       ],
       "metadata": {
         "id": "goJHOtCYat0K"
@@ -177,7 +177,16 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# performing dimentionality reduction\n",
+        "\n",
+        "from umap import UMAP\n",
+        "umap_model = UMAP(\n",
+        "    n_components=5, min_dist=0.0, metric='cosine',\n",
+        "    random_state=42\n",
+        ")\n",
+        "reduced_embeddings = umap_model.fit_transform(embeddings)"
+      ],
       "metadata": {
         "id": "F4PUHyFTat2g"
       },
@@ -186,7 +195,18 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# forming clusters\n",
+        "\n",
+        "from hdbscan import HDBSCAN\n",
+        "hdbscan_model = HDBSCAN(\n",
+        "    min_cluster_size=50, metric=\"euclidean\",\n",
+        "    cluster_selection_methid = \"eom\"\n",
+        ").fit(reduced_embeddings)\n",
+        "\n",
+        "clusters = hdbscan_model.labels_\n",
+        "print(f\"Number of clusters: {len(set(clusters))}\")"
+      ],
       "metadata": {
         "id": "qlbkgG0Vat5H"
       },
